@@ -1,5 +1,8 @@
 {{$NEXT}}
     - Now uses OurPkgVersion (requires source modules change)
+    - Authority insert is now done at comment position
+    - 2 changes above require a # VERSION and # AUTHORITY comments
+      to be inserted into your modules.
 
 0.11      2011-02-18 11:00:51 Europe/London
     - Fixed CommitBuild release messages
